grammar.txt
prog = form { form }
form = "(" def ")" | expr
def = "define" sym expr | "define" "(" sym symlist ")" body
expr = atom | "(" callsyn ")" | "'" data
callsyn = "lambda" "(" symlist ")" body
		| "quote" data
		| "if" expr expr expr
		| "let" "(" bindlist ")" body
		| expr { expr }
atom = str | sym | int | float | true | false | null
symlist = { sym }
bindlist = { "(" sym expr ")" }
data = atom | ( "(" list ")" )
list = { data }
body = { form }
